--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </head>
 <body>
 
-<div class="w3-top">
-    <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
+<div class="w3-top"  >
+    <div class="w3-bar w3-top w3-left-align w3-large" style="background-color:cadetblue;">
         <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)"
            onclick="w3_open()"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
+        <a href="#" class="w3-bar-item w3-button " style=" color: blueviolet;">Logo</a>
         <a href="#monhoc" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Thông tin môn học</a>
         <a href="#congnghe" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Các công nghệ Web</a>
         <a href="#sinhvien" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Thông tin sinh viên</a>
